# macd_trend_adaptive_strategy

./: .gitignore  CHANGELOG.md  README.md  __init__.py  copy-strategy.sh  install-hooks.sh  pyproject.toml  setup-strategy.sh  setup.py  strategy.py  strategy_config.json  strategy_config.yaml
config/: __init__.py  mode_enum.py  strategy_config.py  timeframe_config.py
indicators/: __init__.py
macd_trend_adaptive_strategy/: strategy.py
macd_trend_adaptive_strategy/config/: __init__.py  config_validator.py  sample_macd_config.json  simplified_config.py  strategy_config.json  strategy_config.py
macd_trend_adaptive_strategy/performance/: db_handler.py  tracker.py
macd_trend_adaptive_strategy/regime/: detector.py
macd_trend_adaptive_strategy/risk_management/: __init__.py  roi_calculator.py  stoploss_calculator.py
macd_trend_adaptive_strategy/samples/: strategy_config.sample.json
macd_trend_adaptive_strategy/tests/: conftest.py  debugging.py  test_config.py  test_init.py  (+8 more)
performance/: __init__.py  db_handler.py  tracker.py
regime/: __init__.py  detector.py
risk_management/: __init__.py  roi_calculator.py  stoploss_calculator.py
samples/: strategy_config.sample.json  strategy_config.sample.yaml  strategy_wrapper.py
src/: strategy.py
tests/: conftest.py  test_config.py  test_config_parser.py  test_config_validation.py  test_db_handler.py  test_indicators.py  test_init.py  test_performance_tracker.py  test_regime_detector.py  test_roi_calculator.py  test_stoploss_calculator.py  test_strategy.py  test_strategy_config.py
utils/: __init__.py  helpers.py
(+13 files in other folders)
